# quantum_engine

./: Cargo.toml  README.md  errors.txt
src/: lib.rs  main.rs
src/basis/: contracted.rs  mod.rs  primitive.rs  reader.rs  shell.rs
src/dft/: density.rs  grid.rs  libxc.rs  mod.rs  tau.rs  vxc.rs
src/eri_engine/: Cargo.toml
src/eri_engine/src/: lib.rs
src/gradients/: dft.rs  dft_xc.rs  dft_xc_meta.rs  dft_xc_spin.rs  fock.rs  mod.rs  nuclear_repulsion.rs  one_electron.rs  overlap.rs  overlap_pulay.rs  total.rs  two_electron.rs
src/hessian/: cphf.rs  mod.rs  nuclear.rs  one_electron.rs  overlap.rs  two_electron.rs  xc.rs
src/input/: agua.xyz  input.yaml
src/integrals/: boys.rs  kinetic.rs  mod.rs  nuclear.rs  nuclear_attraction.rs  overlap.rs  overlap_contracted.rs  schwarz.rs
src/integrals/eri/: eri.rs  eri_contracted.rs  eri_hess.rs  eri_hrr.rs  eri_shell.rs  eri_ssss.rs  eri_vrr.rs  mod.rs
src/mo/: mod.rs  space.rs  transform.rs
src/optimization/: bfgs.rs  driver.rs  lbfgs.rs  line_search.rs  mod.rs
src/scf/: density.rs  diis.rs  guess.rs  jk.rs  mod.rs  scf_cycle.rs  udft.rs  uhf.rs  utils.rs
src/spectroscopy/: dipole.rs  ir.rs  mod.rs  polarizability.rs  raman.rs
src/system/: atom.rs  basis_loader.rs  mod.rs  molecule.rs  parser_xyz.rs  periodic_table.rs  units.rs
src/vibrations/: driver.rs  frequencies.rs  hessian_fd.rs  mass.rs  mod.rs  projector.rs
